[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "layerxtr"
version = "2025.12.22082716"
description = "Layerxtr extracts layer details from text, structuring them for designers to auto replicate images."
readme = "README.md"
authors = [{ name = "layerxtr", email = "hi@eugene.plus" }]
requires-python = ">=3.9"
dependencies = [
  "langchain-llm7>=0.0.0",
  "llmatch-messages>=0.0.0",
  "langchain-core>=0.3.0",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/chigwell/layerxtr"
